# messages

./: .gitignore  README.md  com.github.manexim.messages.yml  meson.build  run.sh
.github/workflows/: main.yml
data/: com.github.manexim.messages.appdata.xml  com.github.manexim.messages.appdata.xml.in  com.github.manexim.messages.desktop.in  com.github.manexim.messages.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
plugins/: meson.build
plugins/com.messenger/: com.messenger.vala  meson.build
plugins/com.slack/: com.slack.vala  meson.build
plugins/com.whatsapp.web/: com.whatsapp.web.vala  meson.build
plugins/org.telegram.web/: meson.build  org.telegram.web.vala
po/: POTFILES  com.github.manexim.messages.pot  de.po  es.po  fr.po  it.po
po/extra/: POTFILES  de.po  es.po  extra.pot  fr.po  it.po
src/: Application.vala  MainWindow.vala  meson.build
src/Config/: Constants.vala
src/Dialogs/: MessengerAddDialog.vala  MessengerUpdateDialog.vala
src/Models/: Messenger.vala  Plugin.vala
src/Services/: Messengers.vala  PluginManager.vala  Settings.vala
src/Utilities/: Icon.vala  WebContext.vala
src/Views/: MainView.vala
src/Widgets/: MessengerMenuItem.vala  MessengerView.vala  PluginView.vala  WebView.vala
